refactor(historical): replace reactive WebClient with RestClient
Convert historical/exchange stack from reactive WebClient/Mono/Flux to a
blocking RestClient and synchronous return types to simplify flow and
enable traditional caching. Key changes:
- AbstractHistoricalExchangeStrategy and concrete strategies now use
  RestClient and return List/Ticker24hDto instead of Mono wrappers.
- Service and strategy interfaces updated to synchronous signatures.
- Controller switched from reactive endpoints to implement the
  HistoricalExchangeApi and return ResponseEntity.
- HistoricalExchangeServiceImpl adds logging and Redis caching for 24h
  tickers; RedisConfig registers HISTORICAL_PRICES_CACHE with a short TTL.
- Replaced reactive composition with CompletableFuture/streams where
  appropriate and updated mappers to collect streams to lists.
- Added JsonTypeInfo on Ticker24hDto, toString on HistoricalPriceRequest,
  improved exception logging, and enhanced OpenAPI responses.

BREAKING CHANGE: multiple public APIs changed from reactive types
(Mono/Flux/WebClient-based) to blocking types (List/Ticker24hDto/RestClient).
Clients and implementations must be updated to the new synchronous signatures.